# A76XX_OpenSDK_Anjay

./: .gitignore  CMakeLists.txt  MIGRATION_SUMMARY.md  README.md  build.bat
sc_app/: AppMain.c  CMakeLists.txt  include.h
sc_app/code/Anjay/: .gitignore  CHANGELOG.md  CMakeLists.txt
sc_app/code/Anjay/demo/: demo_args.c
sc_app/code/Anjay/doc/sphinx/source/: AdvancedTopics.rst
sc_app/code/Anjay/doc/sphinx/source/AdvancedTopics/: AT-CertificateUsage.rst  AT-MbedTLSBestPractices.rst
sc_app/code/Anjay/doc/sphinx/source/CommercialFeatures/: CF-EST.rst
sc_app/code/Anjay/doc/sphinx/source/FirmwareUpdateTutorial/: FU-SecureDownloads.rst
sc_app/code/Anjay/examples/commercial-features/CF-SMS/src/: main.c
sc_app/code/Anjay/port/: CMakeLists.txt  README.md  anjay_port.mak
sc_app/code/Anjay/port/config/anjay/: anjay_config.h
sc_app/code/Anjay/port/config/avsystem/coap/: avs_coap_config.h
sc_app/code/Anjay/port/config/avsystem/commons/: avs_commons_config.h
sc_app/code/Anjay/port/inc/: anjay_main.h  anjay_simcom_config.h  conn_stats_object.h  device_object.h  simcom_platform.h
sc_app/code/Anjay/port/src/: anjay_main.c  conn_stats_object.c  device_object.c  net_impl.c  platform_impl.c  timing_simcom.c  tls_impl.c
sc_app/code/Anjay/src/core/: anjay_core.c
